# storage/api-docs/api-docs.json
@@ -18,6 +18,7 @@
         "/api/v1/clients": {
             "get": {
                 "summary": "Get Clients",
+                "description": "Login by email, password",
                 "operationId": "Get clients fuckery",
                 "produces": [
                     "application/vnd.api+json"
@@ -61,23 +62,25 @@
                                 "data": {
                                     "properties": {
                                         "type": {
-                                            "type": "string"
+                                            "type": "string",
+                                            "example": "clients"
                                         },
                                         "attributes": {
                                             "properties": {
                                                 "name": {
                                                     "description": "name",
                                                     "type": "string",
-                                                    "maximum": "2",
-                                                    "minimum": "2"
+                                                    "example": "Vardas"
                                                 },
                                                 "surname": {
                                                     "description": "surname",
-                                                    "type": "string"
+                                                    "type": "string",
+                                                    "example": "Pavarde"
                                                 },
                                                 "yearofbirth": {
                                                     "description": "year of birth",
-                                                    "type": "string"
+                                                    "type": "string",
+                                                    "example": "2000-01-01"
                                                 }
                                             },
                                             "type": "object"
